# Music

./: main.py  pyproject.toml
music/: __about__.py  __init__.py  core.py  sign.js
music/uitls/: http.py  login.py
music/utils/: __init__.py  encrypt.py  http.py  login.py  qq_music.js
