[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["luren <3308862290@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
PyExecJS = "^1.5.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
